{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 202,
  "lineage": "1f629247-852a-6343-4435-63f787f46e6c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08d956861e83ff189",
            "association_id": "eipassoc-01b94f8b718bb8b91",
            "domain": "vpc",
            "id": "eipalloc-08d956861e83ff189",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01a4ad5dc70f196ed",
            "private_dns": "ip-10-0-0-167.ec2.internal",
            "private_ip": "10.0.0.167",
            "public_dns": "ec2-18-215-52-201.compute-1.amazonaws.com",
            "public_ip": "18.215.52.201",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nateIP-demo"
            },
            "tags_all": {
              "Name": "nateIP-demo"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826674046800:internet-gateway/igw-0e1bae6e15366845a",
            "id": "igw-0e1bae6e15366845a",
            "owner_id": "826674046800",
            "tags": {
              "Name": "igw-demo"
            },
            "tags_all": {
              "Name": "igw-demo"
            },
            "vpc_id": "vpc-0eaf38ee47e7d00e1"
          },
          "dependencies": [
            "aws_vpc.vpc-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08d956861e83ff189",
            "connectivity_type": "public",
            "id": "nat-09f33275acbf4d2bc",
            "network_interface_id": "eni-01a4ad5dc70f196ed",
            "private_ip": "10.0.0.167",
            "public_ip": "18.215.52.201",
            "subnet_id": "subnet-00840defc7646c7cf"
          },
          "dependencies": [
            "aws_eip.nateIP-demo",
            "aws_subnet.publicsubnet-demo",
            "aws_vpc.vpc-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826674046800:route-table/rtb-082aa55aa4276550a",
            "id": "rtb-082aa55aa4276550a",
            "owner_id": "826674046800",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09f33275acbf4d2bc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRT-demo"
            },
            "tags_all": {
              "Name": "PrivateRT-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eaf38ee47e7d00e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nateIP-demo",
            "aws_nat_gateway.NATgw-demo",
            "aws_subnet.publicsubnet-demo",
            "aws_vpc.vpc-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826674046800:route-table/rtb-08c261f6bb137a7be",
            "id": "rtb-08c261f6bb137a7be",
            "owner_id": "826674046800",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e1bae6e15366845a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRT-demo"
            },
            "tags_all": {
              "Name": "PublicRT-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eaf38ee47e7d00e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-demo",
            "aws_vpc.vpc-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTassociation-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b7c141c79aa2aad",
            "route_table_id": "rtb-082aa55aa4276550a",
            "subnet_id": "subnet-0cd3099cfdb601a56"
          },
          "dependencies": [
            "aws_eip.nateIP-demo",
            "aws_nat_gateway.NATgw-demo",
            "aws_route_table.PrivateRT-demo",
            "aws_subnet.privatesubnet-demo",
            "aws_subnet.publicsubnet-demo",
            "aws_vpc.vpc-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddbc632f4974c95b",
            "route_table_id": "rtb-08c261f6bb137a7be",
            "subnet_id": "subnet-00840defc7646c7cf"
          },
          "dependencies": [
            "aws_internet_gateway.igw-demo",
            "aws_route_table.PublicRT-demo",
            "aws_subnet.publicsubnet-demo",
            "aws_vpc.vpc-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secgrp-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826674046800:security-group/sg-099a914c825b40950",
            "description": "Allow standard http and https ports inbound and everything outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-099a914c825b40950",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "secgrp-demo",
            "name_prefix": "",
            "owner_id": "826674046800",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "secgrp-demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "secgrp-demo",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eaf38ee47e7d00e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826674046800:subnet/subnet-0cd3099cfdb601a56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd3099cfdb601a56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "826674046800",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privatesubnet-demo"
            },
            "tags_all": {
              "Name": "privatesubnet-demo"
            },
            "vpc_id": "vpc-0eaf38ee47e7d00e1"
          },
          "dependencies": [
            "aws_vpc.vpc-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826674046800:subnet/subnet-00840defc7646c7cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00840defc7646c7cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "826674046800",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicsubnet-demo"
            },
            "tags_all": {
              "Name": "publicsubnet-demo"
            },
            "vpc_id": "vpc-0eaf38ee47e7d00e1"
          },
          "dependencies": [
            "aws_vpc.vpc-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826674046800:vpc/vpc-0eaf38ee47e7d00e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/18",
            "default_network_acl_id": "acl-0fb1a3a499dfc5c68",
            "default_route_table_id": "rtb-084689dbbd7f12846",
            "default_security_group_id": "sg-098f9267b44f18a82",
            "dhcp_options_id": "dopt-cd1d08b5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eaf38ee47e7d00e1",
            "instance_tenancy": "dedicated",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-084689dbbd7f12846",
            "owner_id": "826674046800",
            "tags": {
              "Name": "vpc-demo"
            },
            "tags_all": {
              "Name": "vpc-demo"
            }
          }
        }
      ]
    }
  ]
}